# masif-graph

./: .gitignore  CLAUDE.md  PHASE1_HANDOFF.md  PHASE2_HANDOFF.md  PHASE3_HANDOFF.md  PHASE4_HANDOFF.md  README.md  environment.yml  pyproject.toml
data/lists/: README.md
docs/: 00-context-and-goals.md  01-phase1-design.md  02-phase1-results.md  03-phase2-design.md  04-phase2-results.md  05-phase3-design.md  06-phase3-user-comment.md  07-phase3-results.md  08-phase4-design.md  09-phase4-user-comment.md  10-phase4-results.md  11-phase4-stageC-ppi-scoring.md
experiments/: p4_embed_rot_test.py  p4_stageA_summarize.py  run_p4_m0.py
notebooks/: inspect_p4_data.ipynb
scripts/: af3_infer_wave.sh  af3_model_to_surface.sh  af3_msa_array.sbatch  af3_sample_surf_batch.sh  af3_sample_to_surface.sh  af3_surf_batch.sh  holo_enlarge_batch.sh  holo_prep_batch.sh  m0_batch.sh  m0_run_one.sh  m3_pilot_sweep.sh  m3_surface_smoke.py  m3_train.sbatch  p4_build_full_trainids.py  p4_scaleup_collect.sbatch  p4_scaleup_collect.sh  p4_scaleup_launch.sbatch  p4_scaleup_launch.sh  p4_viz_positives.py  phase1_agent.sbatch  phase2_agent.sbatch  phase3_agent.sbatch  phase3_resume_agent.sbatch  phase4_agent.sbatch  phase4_diag_stageA.sbatch  phase4_precompute_array.sbatch  phase4_preproc.sbatch  phase4_preproc_array.sbatch  phase4_scaleup_agent.sbatch  phase4_scaleup_stageA.sbatch  phase4_stabilize_stageA.sbatch  phase4_stageA.sbatch  phase4_stageA_cosine.sbatch  phase4_vicreg_stageA.sbatch  repack_batch.sh  repack_one.sh  run_phase1_final.sh  smoke_test.sbatch
tests/: test_metric_sanity.py
(+52 files in other folders)
